# nixos-systems

./: .gitignore  binary-cache.nix  flake.nix  hydra.nix  lxc-fixups.nix  result  shell.nix  test.nix
host-builders/: dns.nix
hosts/: dns-a.nix  dns-b.nix  dns64-a.nix  dns64-b.nix  hydra.nix  template-ct.nix
shared-modules/: binary-cache.nix  common-config.nix  default.nix  lxc-suppress-debug-mount.nix  ssh-keys.nix  sysupgrade-next.nix  sysupgrade.nix
sysupgrade/: Cargo.toml  default.nix
sysupgrade/src/: ephemeral_mqtt_client.rs  main.rs
