[package]
name = "sysupgrade"
version = "0.1.0"
edition = "2021"
authors = [ "Jess Schallenberg <jess@v6.fyi>" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive", "cargo"] }
paho-mqtt = "0.11.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"